WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300742
[WTF] Fix -Wc++23-extensions warning in HashTable.h
https://bugs.webkit.org/show_bug.cgi?id=300742
Summary
[WTF] Fix -Wc++23-extensions warning in HashTable.h
David Kilzer (:ddkilzer)
Reported
2025-10-14 16:12:09 PDT
Fix -Wc++23-extensions warning in Source/WTF/wtf/HashTable.h. ``` WebKitBuild/Release/usr/local/include/wtf/HashTable.h:1219:33: warning: definition of a static variable in a constexpr function is a C++23 extension [-Wc++23-extensions] 1219 | static constexpr double minLoadRatio = 1.0 / minLoad; | ^ ```
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2025-10-14 16:12:25 PDT
Occurs with newer clang compiler.
Radar WebKit Bug Importer
Comment 2
2025-10-14 16:12:30 PDT
<
rdar://problem/162638406
>
David Kilzer (:ddkilzer)
Comment 3
2025-10-14 16:20:08 PDT
Regressed in: Do some more constexpr adoption in HashTable.h <
https://bugs.webkit.org/show_bug.cgi?id=293237
> <
https://commits.webkit.org/295120@main
>
David Kilzer (:ddkilzer)
Comment 4
2025-10-14 16:21:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52336
EWS
Comment 5
2025-10-14 21:55:45 PDT
Committed
301529@main
(06432b9d5cdb): <
https://commits.webkit.org/301529@main
> Reviewed commits have been landed. Closing PR #52336 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug