[WTF] Fix -Wc++23-extensions warning in HashTable.h <https://bugs.webkit.org/show_bug.cgi?id=300742> <rdar://162638406>

Reviewed by Chris Dumez.

* Source/WTF/wtf/HashTable.h:
(WTF::Malloc>::computeBestTableSize):
- Remove `static` modifier as it is not needed with `constexpr`.

Canonical link: https://commits.webkit.org/301529@main